Fixed overlaps on homepage

--- a/_css/main.css
+++ b/_css/main.css
@@ -209,7 +209,7 @@ nav a:active{
 	padding: 2em;
 }
 #misson{
-	padding-top: 60px;
+	padding-top: 70px;
 }
 #topics{
 	width: 100%;
@@ -469,11 +469,8 @@ footer{
 		display: inline;
 	}
 	#fhti{
-		margin-top: -16em;
+		margin-top: -22em;
 		padding-top: 85px;
-	}
-	#misson{
-		margin-top: -600px;
 	}
 	hr{
 		visibility: hidden;
